fix dark mode

--- a/jmdwebdev/Frontend/src/Components/About/about.css
+++ b/jmdwebdev/Frontend/src/Components/About/about.css
@@ -212,7 +212,7 @@
 }
 
  
-.dark {
+/* .dark {
 	background: rgb(204,153,51);
     background: linear-gradient(90deg, rgba(204,153,51,1) 0%, rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%, rgba(204,153,51,1) 100%);
     color: white;
@@ -221,4 +221,4 @@
 .light {
 	background: rgb(204,153,51);
 	background: linear-gradient(90deg, rgba(204,153,51,1) 0%, rgba(204,153,51,0) 3%, rgba(204,153,51,0) 97%, rgba(204,153,51,1) 100%);
-}
+} */
