--- a/jmdwebdev/Frontend/src/Components/Contact/ContactForm.css
+++ b/jmdwebdev/Frontend/src/Components/Contact/ContactForm.css
@@ -195,11 +195,11 @@ textarea {
 }
 
 /* Dark and Light Mode Styles */
-.dark {
+/* .dark {
     background: linear-gradient(90deg, rgba(204,153,51,1) 0%, rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%, rgba(204,153,51,1) 100%);
     color: white;
 }
 
 .light {
     background: linear-gradient(90deg, rgba(204,153,51,1) 0%, rgba(204,153,51,0) 3%, rgba(204,153,51,0) 97%, rgba(204,153,51,1) 100%);
-}
+} */
