--- a/jmdwebdev/Frontend/src/Components/Navbar/Navbar.css
+++ b/jmdwebdev/Frontend/src/Components/Navbar/Navbar.css
@@ -20,7 +20,7 @@
   }
   
   .navbar-logo {
-    color: #fff;
+    color: rgba(204,153,51,1) ;
     justify-self: start;
     cursor: pointer;
     text-decoration: none;
@@ -39,7 +39,7 @@
   }
   
   .nav-links {
-    color: #fff;
+    color: rgba(204,153,51,1) ;
     text-decoration: none;
     padding: 0.5rem 1rem;
   }
@@ -54,6 +54,17 @@
   .fa{
     margin-top: 1.5rem;
   }
+
+  /* Dark and Light Mode Styles */
+.dark{
+  background: linear-gradient(90deg, rgba(204,153,51,1) 0%, rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%, rgba(204,153,51,1) 100%);
+  color: white;
+}
+
+.light {
+  background: linear-gradient(90deg, rgba(204,153,51,1) 0%, rgba(204,153,51,0) 3%, rgba(204,153,51,0) 97%, rgba(204,153,51,1) 100%);
+}
+
   
   @media screen and (max-width: 960px) {
     .nav-menu {
